# fastapi_with_tartiflette

./: .gitignore  README.md  alembic.ini  app.py  database.py  models.py  pyproject.toml
directives/: auth.py  rate_limiting.py
migrations/: env.py
migrations/versions/: d969f5743e1a_added_todo_time_column.py  e51da60c0236_initial_migration.py
resolvers/: mutation_resolvers.py  query_resolvers.py  subscription_resolvers.py
sdl/: mutation.graphql  query.graphql  subscription.graphql
